# BanditGUI

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  READMEAI.md  ROADMAP.md  app.py  bandit_levels.py  banditgui.py  chat_header.md  chat_manager.py  flowchart.md  package-lock.json  package.json  password_manager.py  project_overview.md  pyproject.toml  readme-ai.md  requirements.txt  ssh_manager.py  test_app.py  user_progress.json  v1.2-TODO-ISSUES.md
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: feature_request.md
.test/: test_password_manager.py
archive/: v1.1-Final.tar
docs/: BanditGUI-Flowchart.md  Files-BANDIT_LEVELS.py.md  Files-chat_manager.py.md  Files-ssh_manager.py.md  Files-templates_index.html.md  Flowchart-Login-Form.md  Flowchart-Monitor_Output_For_Password.md  Flowchart-SocketIO-Events.md  Flowchart-ssh_manager.py.md  Project-Overview-2.md  Project-Overview.md  v1.0-Review-Cline.md  v1.0-Review-Gemini.md  v1.3-Entity-Relationship-Diagram.md  v1.3-Flowchart.md  v1.3-Project-Overview.md  v1.3-Structure.md
levels/: BANDIT_LEVELS.json  bandit28.md  fetch_bandit_levels.py
levels/bandit-website-data/: bandit0.md  bandit1.md  bandit10.md  bandit11.md  bandit12.md  bandit13.md  bandit14.md  bandit15.md  (+29 more)
src/: app.py  bandit_levels.py  chat_manager.py  ssh_manager.py
templates/: index.html
tests/: test_banditgui.py
v1.3-Testing-and-/: error-handling.py  frontend-improvements.txt  security-enhancements.py  testing-framework.py  v1.3-Refactoring-Claude.md  v1.3-dev-guide-detailed+code.md
(+13 files in other folders)
