[tool.poetry]
name = "banditgui"
version = "0.1.0"
description = ""
authors = ["Frederick Pellerin <fredp3d@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
appmap = "^2.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
