[tool.poetry]
name = "banditgui"
version = "1.3.1"
description = "An interactive web-based platform designed to help users learn Linux security through the OverTheWire Bandit CTF challenges."
authors = ["Frederick Pellerin <fredp3d@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
appmap = "^2.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
